# ICR

./: .gitignore  CMakeLists.txt  PianoCore.txt  README.md  engine_config.json  exploration-20260407-221505.json  gui_main.cpp  icr-config.json  main.cpp  main_gui.cpp  requirements.txt  run-editor-additive.py  run-editor.py  run-extract-additive.py  run-generate-additive.py  run-generate.py  run-training-old.py  run-training.py  scoring-20260407-195055.json  scoring-20260407-195301.json  scoring-20260407-204258.json  scoring-20260407-205303.json  scoring-20260407-210731.json  train-additive.py  tuning_cmd.txt  tuning_log.txt
anchors/: test.json
cores/additive_synthesis_piano/: additive_synthesis_piano_core.cpp  additive_synthesis_piano_core.h  additive_synthesis_piano_math.h
cores/physical_modeling_piano/: physical_modeling_piano_core.cpp  physical_modeling_piano_core.h  physical_modeling_piano_math.h
cores/piano/: piano_core.cpp  piano_core.h  piano_math.h
cores/sampler/: sampler_core.cpp  sampler_core.h  wav_loader.h
cores/sine/: sine_core.cpp  sine_core.h
docs/: ARCHITECTURE.md  CONVOLUTION_REVERB.md  DEVELOPMENT_LOG.md  INSTRUMENT_DNA.md  JSON_SCHEMA.md  MAC_OS_CHANGES.md  PIANO_MODEL_FIXES.md  README.md  ROADMAP.md  SESSION_SUMMARY.md  SOUND_EDITOR.md  SPLINE_FIX.md  SYSEX_PROTOCOL.md  TODO.md  TRAINING_MODULES.md  TRAINING_WORKFLOWS.md  TRAIN_BUILD_RUN.md  teng-audit-2.md
docs/cores/additive-synthesis-piano/: DEVELOPMENT_LOG.md  EXTRACTION_AUDIT.md  JSON_SCHEMA.md  OVERVIEW.md  SYSEX_PARAMS.md  TODO.md  TRAINING_MODULES.md  TRAIN_BUILD_RUN.md
docs/cores/physical-modeling-piano/: DEVELOPMENT_LOG.md  JSON_SCHEMA.md  OVERVIEW.md  POZNATKY.md  TENG_AUDIT.md  TODO.md
docs/cores/sampler/: OVERVIEW.md
docs/cores/sine/: OVERVIEW.md
docs/engine/: API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  MAC_OS_CHANGES.md  MIDI_COMMANDS.md  MODULARIZATION_ANALYSIS.md  MULTI_CORE.md  SYSEX_PROTOCOL.md
docs/tools/: SOUND_EDITOR.md
dsp/: agc.h  dsp_chain.cpp  dsp_chain.h  dsp_math.h
dsp/bbe/: bbe.cpp  bbe.h
dsp/convolver/: convolver.cpp  convolver.h
dsp/limiter/: limiter.cpp  limiter.h
engine/: app_config.cpp  app_config.h  audio_device.cpp  audio_device.h  batch_renderer.cpp  batch_renderer.h  core_engine.cpp  core_engine.h  engine.cpp  engine.h  engine_config.cpp  engine_config.h  i_synth_core.h  logger.h  master_bus.h  midi_input.cpp  midi_input.h  miniaudio_impl.cpp  sysex_handler.cpp  sysex_handler.h
gui/: engine_gui.cpp  engine_gui.h  resonator_gui.cpp  resonator_gui.h
sound-editor/: INSTALL.md  README.md
sound-editor-additive/: README.md
sound-editor-additive/backend/: catalog_store.py  layer_registry.py  sysex_bridge.py
sound-editor-additive/frontend/: package-lock.json  vite.config.js
sound-editor-additive/frontend/src/: main.js
sound-editor-additive/frontend/src/comms/: ApiClient.js
sound-editor-additive/frontend/src/editor/: BankAssembler.js
sound-editor-additive/frontend/src/scene/: CardMesh.js  ParameterSpace.js
sound-editor/backend/: eq_editor.py  layer_registry.py  main.py  params_store.py  requirements.txt  schema_infer.py  spline_engine.py  sysex_bridge.py
sound-editor/frontend/: index.html  package.json
sound-editor/frontend/src/: main.js
sound-editor/frontend/src/comms/: ApiClient.js
sound-editor/frontend/src/editor/: BankBrowser.js  LayerBrowser.js  NoteCompare.js  NoteInspector.js  SplineEditor.js  VelSelector.js
sound-editor/frontend/src/scene/: AxisHelper.js  CardMesh.js  ParameterSpace.js  SplineMesh.js
soundbanks-physical/: A-default.json  B-bright.json  C-warm.json  D-grand.json  E-honkytonk.json  F-mellow.json  G-bridge-mild.json  H-bridge-strong.json  I-bridge-bright.json  J-bridge-dark.json  README.md  X-combined-12vars.json  physical-piano-04081305.json  teng-v2-default.json  v01-steel-bright.json  v02-thick-wound.json  v03-bell-like.json  v04-hard-hammer.json  v05-soft-felt.json  v06-long-sustain.json  v07-short-decay.json  v08-narrow-strike.json  v09-wide-strike.json  v10-max-inharmonic.json  v11-pure-harmonic.json  v12-concert-grand.json
soundbanks-sine/: sine-default.json
tests/: batch_test.json  test_string.py  test_sysex_live.py
tools/: analyze_eq_response.py  analyze_extraction.py  anchor_helper.py  apply_laws.py  blind_scoring.py  clean_reexport.py  extract_soundboard_ir.py  generate_physical_bank.py  inspect_bank.py  interactive_tuner.py  param_explorer.py  predict_quality.py  profile_optimizer.py  quality_report.py  reexport_eq.py  run_extraction.py  spline_fix.py  synthesize_hybrid_bank.py  sysex_roundtrip_test.py  tuning_session.py
tools-physical/: README.md  analyze_timbre.py  generate_teng.py  generate_teng_v2.py
training/: closed_loop_finetune.py  compute_spectral_eq.py  export_piano_params.py  export_soundbank_params.py  extraction_config.py  generate.py  physics_synth.py  pipeline_b_spline_icr_eval.py  pipeline_full.py  pipeline_icr_eval.py  pipeline_simple.py  pipeline_smooth_icr_eval.py  pipeline_v2.py  requirements.txt  torch_synth.py  train_pipeline.py
training/modules/: b_spline_fitter.py  eq_fitter.py  exporter.py  extractor.py  generator.py  icr_evaluator.py  icr_round_trip.py  instrument_dna.py  mrstft_finetune.py  outlier_filter.py  profile_trainer.py  profile_trainer_exp.py  structural_outlier_filter.py  synthesizer.py
training_additive/: extraction_config.py  pipeline_simple.py  pipeline_v2.py  profile-ks-grand.pt
training_additive/modules/: eq_fitter.py  exporter.py  extractor.py  synthesizer.py
training_archive/: pipeline_simple_v1.py
training_old/: mrstft_loss.py  pipeline_b_spline_icr_eval.py  pipeline_experimental.py  pipeline_full.py  pipeline_full_spline_icr_eval.py  pipeline_nn.py  pipeline_simple.py  pipeline_smooth_icr_eval.py
training_old/modules/: b_spline_fitter.py  exporter.py  icr_evaluator.py  mrstft_finetune.py  profile_trainer_no_b.py
